--- a/main.tex
+++ b/main.tex
@@ -211,7 +211,7 @@ UprightFont = basictitlefont
       \resumeItemListEnd
 
     \resumeSubheading
-      {Visiting Researcher}{Jun -- July 2020}
+      {Visiting Researcher}{Jun -- July 2019}
       {University of Tokyo}{Tokyo, Japan}
       \resumeItemListStart
         \resumeItem{Proposed novel video prediction method utilizing Convolutional Long-Short Term Memory paired with an Artificial Neural Network based Voting System}
@@ -224,9 +224,8 @@ UprightFont = basictitlefont
 \section{Achievements}
 \resumeSubHeadingListStart
     \resumeSubheading
-      {Top 19\% of Papers}{Jun -- July 2020}
+      {Top 19\% of Papers}{March 2020}
       {Team14057}{M3 Mathworks Math Modeling Challenge}
-      
   \resumeSubHeadingListEnd
 %-----------PROGRAMMING SKILLS-----------
 \section{Skills}
