--- a/main.tex
+++ b/main.tex
@@ -171,9 +171,9 @@ UprightFont = basictitlefont
       {Bachelors of Science in Computer Science, Mathematics}{May 2024}
       \resumeItemListStart
       
-        \resumeItem{GPA: 3.64/4.0}
+        \resumeItem{GPA: 3.84/4.0}
         
-        \resumeItem{Relevant Coursework: Discrete Structures(current), Programming Fundamentals, Engineering Statistics, Combinatorics(self-taught)}
+        \resumeItem{Relevant Coursework: Discrete Structures, Programming Fundamentals, Engineering Statistics, Combinatorics(self-taught)}
 
       \resumeItemListEnd
       
@@ -204,7 +204,7 @@ UprightFont = basictitlefont
   \resumeSubHeadingListStart
   
     \resumeSubheading
-      {Marketing Committee}{October 2020 -- Present}
+      {Marketing Committee}{October 2020 -- March 2021}
       {University of Florida SASE South Regional Conference Planning Committee}{Remote}
       \resumeItemListStart
         \resumeItem{Coordinated strategies to garner more participation before and during the event, garnering over 100+ applicants during the first couple weeks alone}
@@ -215,7 +215,6 @@ UprightFont = basictitlefont
       {University of Tokyo}{Tokyo, Japan}
       \resumeItemListStart
         \resumeItem{Proposed novel video prediction method utilizing Convolutional Long-Short Term Memory paired with an Artificial Neural Network based Voting System}
-        \resumeItem{Oversaw the building of a remote GPU Farm for rapid and easy training and evaluation of Machine Learning Models}
         \resumeItem{Utilized Pytorch and Numpy to rapidly develop an initial prototype of the model for initial testing and further development}
       \resumeItemListEnd
       
@@ -223,6 +222,9 @@ UprightFont = basictitlefont
 %-----------ACHIEVEMENTS-----------
 \section{Achievements}
 \resumeSubHeadingListStart
+    \resumeSubheading
+          {Deans List}{Fall 2020-Spring 2021}
+          {Herbert College of Engineering}{University of Florida}
     \resumeSubheading
       {Top 19\% of Papers}{March 2020}
       {Team14057}{M3 Mathworks Math Modeling Challenge}
